--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,10 @@
     <hr>
     <h2>contact details</h2>
     <ul>
-        <li><a href="tel;03123456765">phone: 03123456765</a></li>
+        <li><a href="tel;03123456765">phone: +923123456765</a></li>
         <li><a href="mailto:abc@gmail.com">Email: abc@gmail.com</a></li>
         <li><a href="">Address: Lyari kumhar wara near Hari masjid</a></li>
     </ul>
 </body>
+
 </html>
